--- a/index.html
+++ b/index.html
@@ -13,77 +13,7 @@
 <title>Document</title>
 </head>
 <body>
-  <header>
-    <div class="home">
-
-      <img src="/image/Vector.png" alt="">
-      <a href="">Interno</a>
-    </div>
-    <div class="nav">
-      <ol>
-        <li><a href="">Home</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">Services</a></li>
-        <li>
-          <a href="">Pages</a>
-        </li>
-        <li><a href="">Contact Us</a></li>
-      </ol>
-    </div>
-<div class="burger">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
-
-  </header>
-  <main>
-    <section>
-      <div class="hello">
-        <h1>Let's Create Your <br> Dream Interior</h1>
-        <p>The world needs innovators and problem solvers who turn <br>challenges into greater opportunities.</p>
-        <button>Get Started <span class="go1">→</span></button>
-
-      </div>
-    </section>
-    
-  </main>
-  <section class="section1">
-    <div class="width-block">
-      <p class="list">Interior Design</p>
-      <p class="list2">Enhancing the interior to achieve <br> a healthier environment for the <br> people using right space.</p>
-      <a href="">View More <img src="/image/IMAGE (1).png" alt=""></a>
-    </div>
-    <div class="width-block">
-      <p class="list">Furniture</p>
-      <p class="list2">Movable articles that are used <br> to make a room or building <br> suitable for living or working.</p>
-      <a href="">View More <img src="/image/IMAGE (1).png" alt=""></a>
-    </div>
-    <div class="width-block">
-      <p class="list">Flooring</p>
-      <p class="list2">Thin object any finished <br> material applied over a floor <br> structure to provide a walking <br> surface.</p>
-      <a href="">View More <img src="/image/IMAGE (1).png" alt=""></a>
-    </div>
-  </section>
-  <section class="section5">
-    <div class="h33">
-      <h3>We Tackle The Most <br> Challenging Designs</h3>
-      <p class="p4">The world needs innovators and problem solvers who <br> turn challenges into greater opportunities. We have</p>
-      <p>an insatiable curiosity about transformative trends <br> challenging the status.</p>
-      <div class="frame">
-        <img src="/image/Frame.png" alt="">
-        <div>
-          <a href="">012345678</a>
-          <p>Call Us Anytime</p>
-        </div>
-      </div>
-      <button>Get Started <span class="go1">→</span></button>
-
-    </div>
-    <div>
-      <img class="img-flex" src="/image/IMAGE2.png" alt="">
-    </div>
-  </section>
-  <script src="/Js/main.js"></script>
+  <script src="./Js/main.js"></script>
 </body>
+
 </html>
